@@ -23,6 +23,7 @@ import com.graphhopper.reader.ReaderWay;
 import com.graphhopper.reader.osm.conditional.ConditionalOSMTagInspector;
 import com.graphhopper.reader.osm.conditional.DateRangeParser;
 import com.graphhopper.routing.ev.*;
+import com.graphhopper.routing.util.parsers.OSMRoadAccessParser;
 import com.graphhopper.routing.util.parsers.helpers.OSMValueExtractor;
 import com.graphhopper.storage.IntsRef;
 import com.graphhopper.util.*;
@@ -42,9 +43,9 @@ import java.util.*;
  */
 public abstract class AbstractFlagEncoder implements FlagEncoder {
     private final static Logger logger = LoggerFactory.getLogger(AbstractFlagEncoder.class);
-    /* restriction definitions where order is important */
-    protected final List<String> restrictions = new ArrayList<>(5);
     protected final Set<String> intendedValues = new HashSet<>(5);
+    // order is important
+    protected final List<String> restrictions = new ArrayList<>(5);
     protected final Set<String> restrictedValues = new HashSet<>(5);
     protected final Set<String> ferries = new HashSet<>(5);
     protected final Set<String> oneways = new HashSet<>(5);
@@ -92,6 +93,7 @@ public abstract class AbstractFlagEncoder implements FlagEncoder {
 
         ferries.add("shuttle_train");
         ferries.add("ferry");
+        restrictions.addAll(OSMRoadAccessParser.toOSMRestrictions(getTransportationMode()));
     }
 
     protected void init(DateRangeParser dateRangeParser) {
