@@ -318,8 +318,10 @@ public class EncodingManager implements EncodedValueLookup {
                 _addEdgeTagParser(new OSMRoadEnvironmentParser(), false, false);
             if (!em.hasEncodedValue(MaxSpeed.KEY))
                 _addEdgeTagParser(new OSMMaxSpeedParser(), false, false);
-            if (!em.hasEncodedValue(RoadAccess.KEY))
+            if (!em.hasEncodedValue(RoadAccess.KEY)) {
+                // TODO introduce road_access for different vehicles? But how to create it in DefaultTagParserFactory?
                 _addEdgeTagParser(new OSMRoadAccessParser(), false, false);
+            }
 
             // ensure that SpatialRuleParsers come after required EncodedValues like max_speed or road_access
             // TODO can we avoid this hack without complex dependency management?
@@ -356,7 +358,8 @@ public class EncodingManager implements EncodedValueLookup {
             // FlagEncoder can demand TurnCostParsers => add them after the explicitly added ones
             for (AbstractFlagEncoder encoder : flagEncoderList) {
                 if (encoder.supportsTurnCosts() && !em.turnCostParsers.containsKey(encoder.toString()))
-                    _addTurnCostParser(new OSMTurnRelationParser(encoder.toString(), encoder.getMaxTurnCosts()));
+                    _addTurnCostParser(new OSMTurnRelationParser(encoder.toString(), encoder.getMaxTurnCosts(),
+                            OSMRoadAccessParser.toOSMRestrictions(encoder.getTransportationMode())));
             }
 
             if (em.encodedValueMap.isEmpty())
